// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewDashboardResults snapshot test 1`] = `
<DocumentFragment>
  <div
    class="max-w-7xl mx-auto sm:px-6 lg:px-8 py-6"
  >
    <div
      class="bg-white shadow overflow-hidden sm:rounded-md"
    >
      <ul
        class="divide-y divide-gray-200"
      >
        <li>
          <div
            class="flex items-center px-4 py-4 sm:px-6"
          >
            <div
              class="min-w-0 flex-1 flex items-center"
            >
              <div
                class="flex-shrink-0"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="18"
                    cy="18"
                    r="3"
                  />
                  <circle
                    cx="6"
                    cy="6"
                    r="3"
                  />
                  <path
                    d="M13 6h3a2 2 0 0 1 2 2v7"
                  />
                  <line
                    x1="6"
                    x2="6"
                    y1="9"
                    y2="21"
                  />
                </svg>
              </div>
              <div
                class="min-w-0 flex-1 px-4 md:grid md:grid-cols-2 md:gap-4"
              >
                <div>
                  <p
                    class="text-sm font-medium truncate"
                  >
                    <span>
                      &lt;mock-value-for-field-"repository"&gt; #&lt;mock-value-for-field-"number"&gt;
                    </span>
                  </p>
                  <div
                    class="mt-2 sm:flex sm:justify-between"
                  >
                    <div
                      class="sm:flex"
                    >
                      <p
                        class="flex items-center text-sm text-gray-500"
                      >
                        <span
                          class="text-sm"
                          title="Why was I assigned?"
                        >
                          <svg
                            class="flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="12"
                              cy="12"
                              r="10"
                            />
                            <path
                              d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                            />
                            <line
                              x1="12"
                              x2="12.01"
                              y1="17"
                              y2="17"
                            />
                          </svg>
                        </span>
                        &lt;mock-value-for-field-"name"&gt;
                      </p>
                      <p
                        class="mt-2 flex items-center text-sm text-gray-500 sm:mt-0 sm:ml-6"
                      >
                        <span
                          class="text-sm"
                          title="Created at"
                        >
                          <svg
                            class="flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <rect
                              height="18"
                              rx="2"
                              ry="2"
                              width="18"
                              x="3"
                              y="4"
                            />
                            <line
                              x1="16"
                              x2="16"
                              y1="2"
                              y2="6"
                            />
                            <line
                              x1="8"
                              x2="8"
                              y1="2"
                              y2="6"
                            />
                            <line
                              x1="3"
                              x2="21"
                              y1="10"
                              y2="10"
                            />
                          </svg>
                        </span>
                        Nov 30, 2020
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="hidden md:block"
                >
                  <div
                    class="-space-x-1"
                  >
                    <span
                      class="relative inline-flex items-center justify-center h-6 w-6 rounded-full bg-gray-500 ring-2 ring-white"
                      title="<mock-value-for-field-\\"login\\">"
                    >
                      <span
                        class="text-xs font-medium leading-none text-white cursor-default"
                      >
                        &lt;
                      </span>
                    </span>
                  </div>
                  <div
                    class="mt-2"
                  >
                    <p
                      class="text-sm text-gray-500"
                    >
                      &lt;mock-value-for-field-"repository"&gt; #&lt;mock-value-for-field-"number"&gt;
                    </p>
                  </div>
                </div>
              </div>
              <div>
                <a
                  href="/repos/<mock-value-for-field-\\"repository\\">/pull/<mock-value-for-field-\\"number\\">"
                  title="Open on Cody"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="9 18 15 12 9 6"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      class="py-6"
    >
      <button
        class="flex items-center block mx-auto bg-white hover:bg-gray-50 border-gray-300 text-gray-700 px-4 py-2 border shadow-sm text-sm font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500"
      >
        Load More
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReviewDashboardResults snapshot test 2`] = `
<DocumentFragment>
  <div
    class="max-w-7xl mx-auto sm:px-6 lg:px-8 py-6"
  >
    <div
      class="bg-white shadow overflow-hidden sm:rounded-md"
    >
      <ul
        class="divide-y divide-gray-200"
      >
        <li>
          <div
            class="flex items-center px-4 py-4 sm:px-6"
          >
            <div
              class="min-w-0 flex-1 flex items-center"
            >
              <div
                class="flex-shrink-0"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="18"
                    cy="18"
                    r="3"
                  />
                  <circle
                    cx="6"
                    cy="6"
                    r="3"
                  />
                  <path
                    d="M13 6h3a2 2 0 0 1 2 2v7"
                  />
                  <line
                    x1="6"
                    x2="6"
                    y1="9"
                    y2="21"
                  />
                </svg>
              </div>
              <div
                class="min-w-0 flex-1 px-4 md:grid md:grid-cols-2 md:gap-4"
              >
                <div>
                  <p
                    class="text-sm font-medium truncate"
                  >
                    <a
                      href="https://example.local"
                      rel="external"
                      target="_blank"
                      title="My Remote Title"
                    >
                      My Remote Title
                    </a>
                  </p>
                  <div
                    class="mt-2 sm:flex sm:justify-between"
                  >
                    <div
                      class="sm:flex"
                    >
                      <p
                        class="flex items-center text-sm text-gray-500"
                      >
                        <span
                          class="text-sm"
                          title="Why was I assigned?"
                        >
                          <svg
                            class="flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="12"
                              cy="12"
                              r="10"
                            />
                            <path
                              d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                            />
                            <line
                              x1="12"
                              x2="12.01"
                              y1="17"
                              y2="17"
                            />
                          </svg>
                        </span>
                        &lt;mock-value-for-field-"name"&gt;
                      </p>
                      <p
                        class="mt-2 flex items-center text-sm text-gray-500 sm:mt-0 sm:ml-6"
                      >
                        <span
                          class="text-sm"
                          title="Created at"
                        >
                          <svg
                            class="flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <rect
                              height="18"
                              rx="2"
                              ry="2"
                              width="18"
                              x="3"
                              y="4"
                            />
                            <line
                              x1="16"
                              x2="16"
                              y1="2"
                              y2="6"
                            />
                            <line
                              x1="8"
                              x2="8"
                              y1="2"
                              y2="6"
                            />
                            <line
                              x1="3"
                              x2="21"
                              y1="10"
                              y2="10"
                            />
                          </svg>
                        </span>
                        Nov 30, 2020
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="hidden md:block"
                >
                  <div
                    class="-space-x-1"
                  >
                    <span
                      class="relative inline-flex items-center justify-center h-6 w-6 rounded-full bg-gray-500 ring-2 ring-white"
                      title="<mock-value-for-field-\\"login\\">"
                    >
                      <span
                        class="text-xs font-medium leading-none text-white cursor-default"
                      >
                        &lt;
                      </span>
                    </span>
                  </div>
                  <div
                    class="mt-2"
                  >
                    <p
                      class="text-sm text-gray-500"
                    >
                      &lt;mock-value-for-field-"repository"&gt; #&lt;mock-value-for-field-"number"&gt;
                    </p>
                  </div>
                </div>
              </div>
              <div>
                <a
                  href="/repos/<mock-value-for-field-\\"repository\\">/pull/<mock-value-for-field-\\"number\\">"
                  title="Open on Cody"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="9 18 15 12 9 6"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      class="py-6"
    >
      <button
        class="flex items-center block mx-auto bg-white hover:bg-gray-50 border-gray-300 text-gray-700 px-4 py-2 border shadow-sm text-sm font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500"
      >
        Load More
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReviewDashboardResults snapshot test 3`] = `
<DocumentFragment>
  <div
    class="max-w-7xl mx-auto sm:px-6 lg:px-8 py-6"
  >
    <div
      class="bg-white shadow overflow-hidden sm:rounded-md"
    >
      <ul
        class="divide-y divide-gray-200"
      >
        <li>
          <div
            class="flex items-center px-4 py-4 sm:px-6"
          >
            <div
              class="min-w-0 flex-1 flex items-center"
            >
              <div
                class="flex-shrink-0"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="18"
                    cy="18"
                    r="3"
                  />
                  <circle
                    cx="6"
                    cy="6"
                    r="3"
                  />
                  <path
                    d="M13 6h3a2 2 0 0 1 2 2v7"
                  />
                  <line
                    x1="6"
                    x2="6"
                    y1="9"
                    y2="21"
                  />
                </svg>
              </div>
              <div
                class="min-w-0 flex-1 px-4 md:grid md:grid-cols-2 md:gap-4"
              >
                <div>
                  <p
                    class="text-sm font-medium truncate"
                  >
                    <a
                      href="https://example.local"
                      rel="external"
                      target="_blank"
                      title="My Remote Title"
                    >
                      My Remote Title
                    </a>
                  </p>
                  <div
                    class="mt-2 sm:flex sm:justify-between"
                  >
                    <div
                      class="sm:flex"
                    >
                      <p
                        class="flex items-center text-sm text-gray-500"
                      >
                        <span
                          class="text-sm"
                          title="Why was I assigned?"
                        >
                          <svg
                            class="flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="12"
                              cy="12"
                              r="10"
                            />
                            <path
                              d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                            />
                            <line
                              x1="12"
                              x2="12.01"
                              y1="17"
                              y2="17"
                            />
                          </svg>
                        </span>
                        &lt;mock-value-for-field-"name"&gt;
                      </p>
                      <p
                        class="mt-2 flex items-center text-sm text-gray-500 sm:mt-0 sm:ml-6"
                      >
                        <span
                          class="text-sm"
                          title="Created at"
                        >
                          <svg
                            class="flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <rect
                              height="18"
                              rx="2"
                              ry="2"
                              width="18"
                              x="3"
                              y="4"
                            />
                            <line
                              x1="16"
                              x2="16"
                              y1="2"
                              y2="6"
                            />
                            <line
                              x1="8"
                              x2="8"
                              y1="2"
                              y2="6"
                            />
                            <line
                              x1="3"
                              x2="21"
                              y1="10"
                              y2="10"
                            />
                          </svg>
                        </span>
                        Nov 30, 2020
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="hidden md:block"
                >
                  <div
                    class="-space-x-1"
                  >
                    <span
                      class="relative inline-flex items-center justify-center h-6 w-6 rounded-full bg-gray-500 ring-2 ring-white"
                      title="<mock-value-for-field-\\"login\\">"
                    >
                      <span
                        class="text-xs font-medium leading-none text-white cursor-default"
                      >
                        &lt;
                      </span>
                    </span>
                  </div>
                  <div
                    class="mt-2"
                  >
                    <p
                      class="text-sm text-gray-500"
                    >
                      &lt;mock-value-for-field-"repository"&gt; #&lt;mock-value-for-field-"number"&gt;
                    </p>
                  </div>
                </div>
              </div>
              <div>
                <a
                  href="/repos/<mock-value-for-field-\\"repository\\">/pull/<mock-value-for-field-\\"number\\">"
                  title="Open on Cody"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="9 18 15 12 9 6"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      class="py-6"
    >
      <button
        class="flex items-center block mx-auto bg-white hover:bg-gray-50 border-gray-300 text-gray-700 px-4 py-2 border shadow-sm text-sm font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500"
      >
        <svg
          class="animate-spin -ml-1 mr-3 h-5 w-5 text-gray-700"
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            class="opacity-25"
            cx="12"
            cy="12"
            r="10"
            stroke="currentColor"
            stroke-width="4"
          />
          <path
            class="opacity-75"
            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
            fill="currentColor"
          />
        </svg>
        Loading...
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReviewDashboardResults snapshot test with no results 1`] = `
<DocumentFragment>
  <div
    class="max-w-7xl mx-auto sm:px-6 lg:px-8 py-6"
  >
    <div
      class="bg-white shadow overflow-hidden sm:rounded-md"
    >
      <ul
        class="divide-y divide-gray-200"
      >
        <li>
          <div
            class="mx-auto text-sm font-medium px-4 py-4 sm:px-6"
          >
            <p
              class="flex items-center text-sm text-gray-500"
            >
              <svg
                class="flex-shrink-0 mr-1.5 h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="20 12 20 22 4 22 4 12"
                />
                <rect
                  height="5"
                  width="20"
                  x="2"
                  y="7"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="22"
                  y2="7"
                />
                <path
                  d="M12 7H7.5a2.5 2.5 0 0 1 0-5C11 2 12 7 12 7z"
                />
                <path
                  d="M12 7h4.5a2.5 2.5 0 0 0 0-5C13 2 12 7 12 7z"
                />
              </svg>
              No pending reviews! Great job!
            </p>
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
